# AOA-Financial

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  LOOP.md  README.md  SETUP-AWAITING-YOU.md  STATE.md  docker-compose.moomoo-opend.example.yml  docker-compose.openstock.yml  docker-compose.yml  loop-budget.md  loop-constraints.md  loop-prompts.yaml  loop-run-log.md  obsidian-second-brain.env.example  openstock.env.example  pyproject.toml  requirements-dev.txt  requirements-tradingagents.txt  requirements.txt  setup.py
.cursor/: environment.json
.github/workflows/: ci.yml  loop-preflight.yml  loop-queue-sync.yml  python-package-ci.yml  python-package-conda.yml
aoa_financial/: __init__.py  __main__.py  cli.py  config.py  tune.py
aoa_financial/analysis/: __init__.py  _backend.py  factors.py  forecast.py  frames.py  fundamentals.py  regimes.py  reverse_engineer.py  sentiment.py  series.py  technical.py
aoa_financial/backtest/: __init__.py  engine.py
aoa_financial/databases/: __init__.py  schema.sql  store.py
aoa_financial/ingest/: __init__.py  fundamentals_feed.py  loaders.py  synthetic.py
aoa_financial/llm/: __init__.py  analyst.py
aoa_financial/swarm/: __init__.py  agents.py  decision.py
brain/: README.md  _CLAUDE.md
brain/decisions/: 2026-07-18-attl-auto-12.md
brain/mesh/: index.yaml  repos.yaml
brain/spine/: ATTL.md  Algorithms.md  Team-Mesh.md
bridge/obsidian-skills/: README.md  claude-md-snippet.md  setup.sh
bridge/spine-obsidian/: README.md  graph.json  setup.sh  spine-architecture.md
deploy/: aoa-swarm.service  aoa-web.service
docs/: fable5-repair-loop.md  loop-l2-checklist.md  safety.md  upgrade-backlog.json
docs/design/: agentic-task-team-loop.md
docs/how-to/: always-on-dashboard.md  automation-tiers.md  fable-max-operating-schedule.md  fresh-clone.md  loop-automation-schedule.md  moomoo-setup-walkthrough.md  moomoo-setup.md  obsidian-second-brain-integration.md  obsidian-skills-integration.md  ollama-local-llm.md  openstock-integration.md  setup-moomoo.md  spine-integration.md  workloop-upgrade.md
docs/plans/: moomoo-migration-fable5.md
docs/tradingagents/: CHANGELOG.md  INTEGRATION.md
examples/: run_demo.py
journal/: state.json
patterns/: registry.yaml
profiles/: docker.env  live.env.example  moomoo-live.env.example  moomoo-paper.env  moomoo.env  paper-dry.env  paper.env  test.env
scripts/: activate.sh  aoa-serve-daemon.sh  check_stage_a.sh  ensure-knowledge-stack-env.sh  install-aoa-launchagent.sh  install_loop_cron.example.sh  install_moomoo_opend_linux.sh  install_moomoo_opend_macos.sh  integrate-obsidian-skills.sh  integrate-spine-obsidian.sh  knowledge-stack-setup.sh  loop-sync.sh  moomoo_setup_stage.py  obsidian-second-brain-setup.sh  obsidian-skills-setup.sh  open-obsidian-vault.sh  openstock-setup.sh  setup-always-on.sh  setup-tailscale-access.sh  setup_alpaca_auth.sh  setup_mac.sh  setup_moomoo_auth.sh  smoke_structured_output.py  spine-setup.sh  sync-obsidian-second-brain-env.sh  sync-openstock-env.sh  sync-spine-config.sh  test_yfinance_indicators.py  tradingagents_propagate.py  verify-knowledge-stack.sh
scripts/lib/: env-file.sh
scripts/mac/: aoa-doctor.command  aoa-run.command  aoa-setup.command  open-env.command
src/aoa/: __init__.py  activate.py  cli.py  config.py  health.py  (+4 more)
tests/: conftest.py  test_activate.py  test_adapt.py  test_advisor.py  test_advisor_tools.py  test_agent_resilience.py  test_alpaca_bars.py  test_alpaca_bars_fetcher.py  test_alpaca_broker.py  test_alpaca_cli_profile.py  test_analytics.py  test_andrea_financepy.py  test_assistant.py  test_attl.py  test_bars.py  test_brokerage_models.py  test_burnin.py  test_cli.py  test_code_engineering.py  test_config.py  test_constraints_mesh.py  test_core.py  test_custom_app_notify.py  test_executor.py  test_hailey_andrea.py  test_historical.py  test_indicators.py  test_iphone_notify.py  test_jim_cindy.py  test_live.py  test_llm_client.py  test_llm_provider.py  test_loop_prompts.py  test_loop_scaffold.py  test_loop_schedule_gate.py  test_loop_user_brief.py  test_meshing.py  test_model_exploit.py  test_moomoo_broker.py  test_morgan.py  (+35 more)
vault/: _schema.yaml
(+179 files in other folders)
