[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aoa-financial"
version = "0.1.0"
description = "An autonomous agentic swarm that analyzes the stock market and trades stocks and options in a cash account through a live brokerage."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AOA Financial" }]
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0", "ruff>=0.6.0"]
web = ["fastapi>=0.115.0", "uvicorn[standard]>=0.32.0"]
all = ["aoa-financial[dev,web]"]

[project.scripts]
aoa = "aoa.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
