[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aoa-financial"
version = "0.3.0"
description = "An autonomous agentic swarm that analyzes the stock market and trades stocks and options in a cash account through a live brokerage."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AOA Financial" }]
dependencies = [
    "alpaca-py>=0.40.0",
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0", "ruff>=0.6.0"]
web = ["fastapi>=0.115.0", "uvicorn[standard]>=0.32.0"]
tradingagents = [
    "tradingagents @ git+https://github.com/TauricResearch/TradingAgents.git@v0.3.0",
]
tradingagents-bedrock = [
    "tradingagents[bedrock] @ git+https://github.com/TauricResearch/TradingAgents.git@v0.3.0",
]
# Only needed for aoa.adapt.torch_lora (general-purpose PyTorch LoRA). The
# swarm's own signal adaptation is pure-Python and needs none of this.
torch = ["torch>=2.0.0"]
# FinancePy quant context for Andrea's options/hedge analysis (GPL-3.0 optional).
financepy = ["financepy>=1.0.0"]
moomoo = ["moomoo-api>=10.0.0"]
all = ["aoa-financial[dev,web,tradingagents,torch,financepy,moomoo]"]

[project.scripts]
aoa = "aoa.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--ignore=tests/test_core.py"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["tests/test_core.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
